feat(api): add auth and token
